<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/navigation_dashboard">

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.masargodha.stone.ui.fragment.DashboardFragment"
        android:label="@string/nav_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_orders"
        android:name="com.masargodha.stone.ui.fragment.OrdersFragment"
        android:label="@string/nav_orders"
        tools:layout="@layout/fragment_orders" />

    <fragment
        android:id="@+id/navigation_customers"
        android:name="com.masargodha.stone.ui.fragment.CustomersFragment"
        android:label="@string/nav_customers"
        tools:layout="@layout/fragment_customers" />

    <fragment
        android:id="@+id/navigation_rates"
        android:name="com.masargodha.stone.ui.fragment.RatesFragment"
        android:label="@string/nav_rates"
        tools:layout="@layout/fragment_rates" />
</navigation>
